[gd_scene load_steps=5 format=2]

[ext_resource path="res://GoodBullet.gd" type="Script" id=1]
[ext_resource path="res://good_bullet.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 18.1669

[node name="GoodBullet" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.03, 0.03 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.0987617, 0.197534 )
scale = Vector2( 1.48395, 1.13827 )
[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_Visibility_screen_exited"]
